apps/dev/ingress/base/ingressclass.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
    name: nginx
  spec:
    controller: k8s.io/ingress-nginx
kind: List
